--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -126,80 +126,7 @@ body {
     transform: translate(-50%,-40%);
 }
 
-/*Login Bereich*/
-#loginField{
-    padding: 20px 20px 50px 20px;
-    border: none;
 
-}
-
-#loginLegend{
-    margin-left: 8.5vw;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-family: "Segoe UI";
-    font-size: 2.8em;
-
-}
-
-#loginAttribut{
-    font-family: "Segoe UI Light";
-    font-size: 2.0em;
-    text-align: left;
-    padding: 20px 20px 20px 20px;
-}
-
-#loginInput {
-    color: white;
-    font-family: "Segoe UI Light";
-    font-size: 1.8em;
-    outline: none;
-    background-color: transparent;
-    width: 90%;
-    border-color: white;
-    border-radius: 10px;
-    border-width: 2px;
-
-
-
-}
-
-#loginLogin{
-    width: 8vw;
-    padding: 5px 10px 5px 10px;
-    font-family: "Segoe UI Light";
-    font-size: 2.0em;
-
-    color: white;
-    text-align: center;
-    border-radius: 10px;
-    margin-left: 13vw;
-    border-color: white;
-    border-width: 1.5px;
-    border-style: solid;
-
-
-}
-
-#loginContainer{
-    position: absolute;
-    text-align: center;
-
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%,-40%);
-
-    box-shadow: inset 0 0 0 500px rgba(255,255,255,0.32);
-    border-radius : 25px;
-    height: 37%;
-    z-index: 2;
-}
-
-#log{
-    text-align: center;
-    color: white;
-
-}
 
 /*Fenster Map Page btw. Test-Page*/
 #MapFenster{
@@ -214,34 +141,7 @@ body {
     height: 20px;
 }
 
-.notiz1{
 
-    position: fixed;left: 35em;
-}
-
-.notiz2{
-    position: fixed; left: 35em;top: 9em;
-
-}
-
-.Seitenfenster3{
-
-    
-    width: 250px;
-    height: 30px;
-    float:right;
-
-    position: fixed; margin-top: 40em;
-
-}
-
-#noteAttribut{
-    font-family: "Segoe UI Light";
-    font-size: 2.0em;
-    text-align: left;
-    padding: 10px 10px 10px 10px;
-
-}
 
 /*Seite soziale Projekte, Link für Antrag */
 
@@ -255,3 +155,103 @@ body {
     color: white;
     text-decoration: none;
 }
+
+
+/*Login Seite*/
+
+#log{
+
+    box-shadow: inset 0 0 0 500px rgba(255,255,255,0.32);
+    border-radius : 25px;
+    z-index: 2;
+    text-align: center;
+    color: white;
+    padding-top: 3%;
+    padding-bottom: 3%;
+}
+
+#loginContainer{
+     position: absolute;
+     text-align: center;
+
+     top: 30%;
+     left: 50%;
+     transform: translate(-50%,-40%);
+
+ }
+
+#loginLogin{
+    display: inline-block;
+    padding: 1% 3% 1% 3%;
+    font-family: "Segoe UI Light";
+    font-size: 16pt;
+    margin-bottom: 8%;
+    color: white;
+    text-align: center;
+    border-radius: 10px;
+
+    border-color: white;
+    border-width: 1.5px;
+    border-style: solid;
+
+
+}
+
+#linkLogin{
+    padding: 1%;
+    font-family: "Segoe UI Light";
+    font-size: 16pt;
+    color: white;
+    border-style: none;
+   text-decoration: none;
+    background-color: transparent;
+}
+
+#loginField{
+    margin-bottom: 5%;
+    padding: 2%;
+    border: none;
+
+}
+
+#loginLegend{
+    margin: 1% 0% 3% 20%;
+    font-family: "Segoe UI";
+    font-size: 24pt;
+
+}
+
+#loginAttribut{
+   width: 35%;
+    font-family: "Segoe UI Light";
+    font-size: 16pt;
+    text-align: left;
+    padding: 2%;
+}
+
+#loginInput {
+    padding: 1%;
+    color: white;
+    font-family: "Segoe UI Light";
+    font-size: 16pt;
+    outline: none;
+    background-color: transparent;
+    width: 90%;
+    border-color: white;
+    border-radius: 10px;
+    border-width: 2px;
+
+}
+
+#rememberMe{
+    display: inline-block;
+    margin: 2% 0% 1% 43%;
+    padding: 0;
+ float: left;
+}
+
+#rememberMeCheck{
+padding: 0;
+    margin: 4.5% 0%;
+}
+
