--- a/app/views/diseases/show.html.erb
+++ b/app/views/diseases/show.html.erb
@@ -11,7 +11,7 @@
   <div id="wikiTitle"><%=@disease.name %></div>
 
 <br>
-  <div id="register">
+  <div id="overview">
   <a href="#Anker11" id="anker">1.1 Was ist <%=@disease.name %>?</a><br>
   <a href="#Anker12" id="anker">1.2 Wie infiziert man sich?</a><br>
   <a href="#Anker13" id="anker">1.3 Symptome</a><br>
