--- a/app/views/vaccination_cards/new.html.erb
+++ b/app/views/vaccination_cards/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Vaccination Card</h1>
+<h1 style="color: white">New Vaccination Card</h1>
 
 <%= render 'form', vaccination_card: @vaccination_card %>
 
