--- a/app/views/pages/test_page.html.erb
+++ b/app/views/pages/test_page.html.erb
@@ -285,7 +285,8 @@
   <!--Besser: Combobox-->
  <td> <input id="input1" type="text"></td>
   <!--Besser: DatePicker-->
-    <tr><td><input id="input1" name="startDate" placeholder="dd/mm/yyyy" type="datetime-local"></td></tr>
+
+    <tr><td><div><input type="date" id="input1" name="startDate"></div></td></tr>
     <tr id="text"><td>Dauer in Tagen</td></tr>
     <tr><td><input id="input1" name="duration" type="text"></td></tr>
 
