--- a/app/views/pages/_leftsidepart.html.erb
+++ b/app/views/pages/_leftsidepart.html.erb
@@ -12,6 +12,7 @@
           <li id="menuLink"><%= link_to "soziale Projekte", projects_path %></li>
           <li id="menuLink"><%= link_to "Kompendium", "/wikiMain" %></li>
           <li id="menuLink"><%= link_to "Krankheiten", diseases_path %></li>
+          <li id="menuLink"><%= link_to "Flugsuche", "flysearch" %></li>
         <% else if current_user.doc?%>
           <li id="menuLink"><%= link_to "Accountinfo", "/accinfo" %></li>
           <li id="menuLink"><%= link_to "Home", "/main" %></li>
@@ -21,6 +22,7 @@
           <li id="menuLink"><%= link_to "soziale Projekte", "/socialProjects" %></li>
           <li id="menuLink"><%= link_to "Kompendium", "/wikiMain" %></li>
           <li id="menuLink"><%= link_to "Krankheiten", diseases_path %></li>
+            <li id="menuLink"><%= link_to "Flugsuche", "flysearch" %></li>
         <% else %>
           <li id="menuLink"><%= link_to "Accountinfo", "/accinfo" %></li>
           <li id="menuLink"><%= link_to "Home", "/main" %></li>
@@ -28,6 +30,7 @@
           <li id="menuLink"><%= link_to "Notizen", "/note" %></li>
           <li id="menuLink"><%= link_to "soziale Projekte", "/socialProjects" %></li>
           <li id="menuLink"><%= link_to "Kompendium", "/wikiMain" %></li>
+            <li id="menuLink"><%= link_to "Flugsuche", "flysearch" %></li>
         <% end %><% end %>
         <li id="menuLink"><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
       <% end %>
