--- a/app/views/pages/login_page.html.erb
+++ b/app/views/pages/login_page.html.erb
@@ -1,6 +1,9 @@
-<div class="video-container" xmlns="http://www.w3.org/1999/html">
-  <%= video_tag "rotation.mp4", id:"bgvid", autoplay:"", loop:"", muted:"" %>
+<div class="image-container" xmlns="http://www.w3.org/1999/html">
+  <%= image_tag "v1" , size: "2048x1080"  %>
+
 </div>
+
+<div class="verdunkelung">
 
 <div id="loginContainer">
 
@@ -32,12 +35,14 @@
 
 </fieldset>
 
-</div>
-
-</form>
   <div id="loginLogin">
     <div id="link">
       <%= link_to 'login' , '/main' %>
     </div>
   </div>
+
+
+</div>
+</form>
+</div>
 </div>
