--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -8,18 +8,18 @@
     text-align: left;
     margin: 1% 2% 4% 4%;
     font-size: 11pt;
-    transform: translate(-2%,110%);
+
 }
 
 .regInput {
     color: white;
     font-family: "Segoe UI Light";
-    font-size: 16pt;
+    font-size: 14pt;
     outline: none;
     background-color: transparent;
     width: 90%;
     border-color: white;
-    border-radius: 10px;
+    min-width: 150pt;
     border-width: 2px;
     padding: 1%;
 
@@ -41,19 +41,19 @@
 
 #regLogin{
     display: inline-block;
-    padding:0.5%;
     font-family: "Segoe UI Light";
-    font-size: 18pt;
-
+    font-size: 16pt;
+    padding-left: 1%;
+    padding-bottom: 1%;
     color: white;
     background-color: rgba(255,255,255,0);
-    text-align: center;
-    border-radius: 10px;
+
+    margin-top: 5%;
 
     border-color: white;
-    border-width: 1.5px;
+    border-width: 1px;
     border-style: solid;
-    transform: translate(-95%,10%);
+
 
 }
 
@@ -61,13 +61,11 @@
     position: absolute;
     text-align: center;
 
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%,-40%);
+    top: 13%;
+    left: 36%;
 
-    box-shadow: inset 0 0 0 500px rgba(255,255,255,0.32);
-    border-radius: 25px;
-    height: 80%;
+
+    background-color: rgba(0,0,0,0.6);
     z-index: 2;
 }
 
@@ -77,7 +75,9 @@
     margin-top: 1%;
     font-family: "Segoe UI";
     font-size: 28pt;
-    transform: translate(50%);
+    text-align: center;
+    margin-left: 32%;
+
 }
 
 #regField{
