--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,8 @@
-<div class="video-container" xmlns="http://www.w3.org/1999/html">
-  <%= video_tag "rotation.mp4", id:"bgvid", autoplay:"", loop:"", muted:"" %>
+<div class="image-container" xmlns="http://www.w3.org/1999/html">
+  <%= image_tag "v1" , size: "2048x1080"  %>
 </div>
+
+<div class="verdunkelung">
 
 <div id="registerContainer">
 
@@ -66,6 +68,7 @@
     </div>
  <% end %>
   </div>
+</div>
 
 <%= render "devise/shared/links" %>
 
