--- a/app/assets/stylesheets/leftsidepart.css
+++ b/app/assets/stylesheets/leftsidepart.css
@@ -1,27 +1,36 @@
 #SeitenfensterLinks{
 
-    margin: 13% 0;
-    padding: 10px 10px 20px 30px;
-    background: rgba(255,255,255, .35);
-    width: 180px;
+    position: fixed;
+   text-align: left !important;
+    top: 0%;
+    height: 85.1%;
+    padding: 5% 1% 1% 2%;
+    background: rgba(0, 0, 0, 0.6);
+    width: 7%;
+    min-width: 180px;
+
     float:left;
-    bottom: 2em;
-    border-bottom-right-radius: 10px;
-    border-top-right-radius: 10px;
-    z-index: 1;
+
+    z-index: 3;
 }
 
 #menu{
+
     opacity: 100%;
+    height: 100%;
     color: white;
-    padding: 10px 0px 0px 0px;
 }
 
 #menuLink *{
-    text-decoration: none;
-    color: white;
+
+    padding: 0.5% 0% 0.5% 0% ;
     line-height: 2.0em;
     font-size: 1.6em ;
     font-family: "Segoe UI Light";
+    text-decoration: none;
 
+}
+
+#menuLink :hover{
+    color: rgba(49,165,159,1);
 }
