--- a/app/views/pages/flysearch.html.erb
+++ b/app/views/pages/flysearch.html.erb
@@ -1,16 +1,5 @@
 <style>
-.Seitenfenster2{
-margin: 13% -0 ;
 
-background: rgba(0,0,0, .35);
-width: 9vw;
-bottom: 2em;
-border-bottom-left-radius: 10px;
-border-top-left-radius: 10px;
-padding: 10px 10px 20px 30px;
-z-index: 2;
-
-}
 #input1{
   font-size: 1.0em;
   font-family: "Segoe UI Light";
@@ -26,14 +15,18 @@ z-index: 2;
 }
 </style>
 
-<div id="gesamtesFenster">
-  <%= image_tag "impfpassBackground.jpg", class: "testIcon" %>
+<div class="image-container" xmlns="http://www.w3.org/1999/html">
+  <%= image_tag "backgroundAfterLogin.jpg" , size: "2048x1080"  %>
+
 </div>
+
+<div class="verdunkelung">
 
 <%= render partial: 'pages/newsline'%>
 
 <%= render partial: 'pages/leftsidepart'%>
 <div id="tabellenPlatz">
+  <div id="wikiTitle">Reise</div>
 <table id="text">
 
   <tr> <td id="text">Reiseziel</td></tr>
@@ -79,5 +72,6 @@ z-index: 2;
     <a href= "javascript:expedia()"  target="_blank" >Suche</a>
 
   </div>
+</div>
 </div>
 </div>
