--- a/app/views/pages/impfpass_page.html.erb
+++ b/app/views/pages/impfpass_page.html.erb
@@ -1,6 +1,9 @@
-<div id="gesamtesFenster">
-  <%= image_tag "impfpassBackground.jpg", class: "testIcon" %>
+<div class="image-container" xmlns="http://www.w3.org/1999/html">
+  <%= image_tag "backgroundAfterLogin.jpg" , size: "2048x1080"  %>
+
 </div>
+
+<div class="verdunkelung">
 
 
 <%= render partial: 'pages/newsline'%>
@@ -13,7 +16,7 @@
   <div id="tabellenPlatz">
 
     <div id="who">
-    <%= image_tag "WHO.png", height: "120vh" %>
+    <%= image_tag "WHO.png", height: "105pt" %>
     </div>
 
     <div id="comboBox">
@@ -63,3 +66,4 @@
 
     </div>
   </div>
+</div>
