--- a/app/views/pages/notes_page.html.erb
+++ b/app/views/pages/notes_page.html.erb
@@ -1,12 +1,17 @@
-<div id="gesamtesFenster">
-  <%= image_tag "impfpassBackground.jpg", class: "testIcon" %>
+<div class="image-container" xmlns="http://www.w3.org/1999/html">
+  <%= image_tag "backgroundAfterLogin.jpg" , size: "2048x1080"  %>
+
 </div>
+
+<div class="verdunkelung">
 
 <%= render partial: 'pages/newsline'%>
 
 <%= render partial: 'pages/leftsidepart'%>
 
 <div id="tabellenPlatz">
+
+  <div id="wikiTitle">Notizen</div>
 
   <div id="Seitenfenster3">
 
@@ -46,4 +51,5 @@
     </div>
 
 <% end %>
+</div>
 </div>
