--- a/app/views/pages/vaccination_information.html.erb
+++ b/app/views/pages/vaccination_information.html.erb
@@ -1,6 +1,9 @@
-<div id="gesamtesFenster">
-  <%= image_tag "impfpassBackground.jpg", class: "testIcon" %>
+<div class="image-container" xmlns="http://www.w3.org/1999/html">
+  <%= image_tag "backgroundAfterLogin.jpg" , size: "2048x1080"  %>
+
 </div>
+
+<div class="verdunkelung">
 
 <%= render partial: 'pages/newsline'%>
 
@@ -9,4 +12,6 @@
 <div id="tabellenPlatz">
   <div id="wikiTitle"> Impfkalender des RKI Stand 2017</div>
   <%= image_tag "vaccination_calender_2017.png", id: "vaccination_calender"%>
+</div>
+
 </div>
