--- a/app/views/projects/sozialeProjekte_page.html.erb
+++ b/app/views/projects/sozialeProjekte_page.html.erb
@@ -1,6 +1,9 @@
-<div id="gesamtesFenster">
-  <%= image_tag "impfpassBackground.jpg", class: "testIcon" %>
+<div class="image-container" xmlns="http://www.w3.org/1999/html">
+  <%= image_tag "backgroundAfterLogin.jpg" , size: "2048x1080"  %>
+
 </div>
+
+<div class="verdunkelung">
 
 <%= render partial: 'pages/newsline'%>
 
@@ -39,4 +42,5 @@
     </table>
 
   </div>
+</div>
 </div>
