--- a/app/assets/stylesheets/diseases.css
+++ b/app/assets/stylesheets/diseases.css
@@ -1,18 +1,20 @@
 #overview{
-    margin-left: 4.5%;
+    margin-left: 3.5%;
     margin-top: 1%;
+    margin-right: 70%;
+    margin-bottom: 3%;
     color: white;
     text-align: left;
     border: solid 1px white;
-    border-radius: 10px;
     padding: 10pt 10pt 16pt 10pt ;
     line-height: 20pt;
     display: inline-block;
+    float: left;
 }
 
 #anker{
     text-decoration: none;
     color: white;
     font-size: 16pt ;
-    font-family: "Segoe UI Semilight";
+    font-family: "Segoe UI Light";
 }
