--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -11,16 +11,17 @@ body {
 #title {
     position: absolute;
     margin-top: 10%;
-    margin-left: 35%;
+    margin-left: 30%;
 
 }
 
 #logReg{
-    width: 100%;
+    width: 98%;
     height: 2.5%;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0,0,0,0.8);
     position: absolute;
     text-align: right;
+    float: left;
     z-index: 3;
 
 
@@ -29,11 +30,11 @@ body {
 
 #textContainer{
     position: absolute;
-    width: 90%;
+    width: 95%;
     height: 100%;
     overflow: auto;
     overflow-x: hidden;
-    margin-left: 6%;
+    margin-left: 5%;
     z-index: 2;
 }
 
@@ -125,12 +126,15 @@ body {
 /* Test für neuen Hintergrund */
 
 .verdunkelung {
+
     width: 100%;
     height: 100%;
     position: absolute;
     background-color: rgba(0,0,0,0.2);
     overflow: hidden;
     text-align: center;
+
+    background-size: cover;
 
 
 }
@@ -172,7 +176,8 @@ body {
     height:100%;
     width: 100%;
     position: absolute;
-    z-index: -1;
+    overflow: hidden;
+    z-index: 1;
 }
 
 .radiobutton {
@@ -193,6 +198,10 @@ body {
     font-size: 1.2em;
     color: white;
     text-decoration: none;
+}
+
+#link_to_Antrag :hover{
+    color: rgba(49,165,159,1);
 }
 
 
@@ -307,8 +316,8 @@ padding: 0;
     text-align: center;
 
     margin-top: 50%;
-    color: #000000;
-    background: rgba(255,255,255,1);
+    color: #ffffff;
+    background: rgba(49,165,159,1);
     width: 100%;
     font-size: 16pt;
     border-radius: 0 50px 50px 0;
