--- a/app/views/diseases/show.html.erb
+++ b/app/views/diseases/show.html.erb
@@ -1,6 +1,9 @@
-<div id="gesamtesFenster">
-  <%= image_tag "impfpassBackground.jpg", class: "testIcon" %>
+<div class="image-container" xmlns="http://www.w3.org/1999/html">
+  <%= image_tag "backgroundAfterLogin.jpg" , size: "2048x1080"  %>
+
 </div>
+
+<div class="verdunkelung">
 
 <%= render partial: 'pages/newsline'%>
 
@@ -18,6 +21,7 @@
   <a href="#Anker14" id="anker">1.4 Vorbeugung und Bekämpfung</a><br>
   </div>
 
+
   <div id="inhalt">
   <br><h2 id="Anker11">1.1 Was ist <%=@disease.name %>?</h2>
   <%= @disease.what%><br><br>
@@ -31,5 +35,6 @@
     <br><h2 id="Anker14">1.4 Vorbeugung und Bekämpfung</h2>
     <%= @disease.counteraction%><br>
   <br>
+</div>
 </div>
 </div>
