--- a/app/views/pages/welcome_page.html.erb
+++ b/app/views/pages/welcome_page.html.erb
@@ -17,10 +17,10 @@
 </div>
 -->
 
-<!--<div class="image-container" xmlns="http://www.w3.org/1999/html">
+<div class="image-container" xmlns="http://www.w3.org/1999/html">
   <%= image_tag "v1" , size: "2048x1080"  %>
 </div>
--->
+
 <div class="verdunkelung">
 
 
