--- a/app/assets/stylesheets/leftsidepart.css
+++ b/app/assets/stylesheets/leftsidepart.css
@@ -12,6 +12,15 @@
     float:left;
     clear: both;
     z-index: 1;
+
+    /*for fadeout/default invisibility*/
+    opacity: 0;
+    -webkit-transition:all 1s linear;
+}
+
+#SeitenfensterLinks:hover{
+    opacity: 1;
+    -webkit-transition:all 1s linear;
 }
 
 #menu{
