--- a/app/assets/stylesheets/leftsidepart.css
+++ b/app/assets/stylesheets/leftsidepart.css
@@ -16,6 +16,7 @@
     /*for fadeout/default invisibility*/
     opacity: 0;
     -webkit-transition:all 1s linear;
+    -webkit-transition-delay: 4s;
 }
 
 #SeitenfensterLinks:hover{
