--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,17 +1,97 @@
-<%= form_for(user) do |f| %>
-  <% if user.errors.any? %>
+<div class="image-container" xmlns="http://www.w3.org/1999/html">
+  <%= image_tag "backgroundAfterLogin.jpg" , size: "2048x1080"  %>
+
+</div>
+
+<div class="verdunkelung">
+
+  <%= render partial: 'pages/leftsidepart'%>
+
+  <div id="tabellenPlatz">
+    <div id="wikiTitle">Editing User</div>
+    <% if @user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
       <ul>
-      <% user.errors.full_messages.each do |message| %>
+      <% @user.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
+    <div id="reg">
+      <fieldset id="user_edit_Field">
+        <table>
+          <tr>
+            <td class="regAttribut"><%= f.label :user_name, style: "display: inline" %>
+              <span class="mandatory_field">*</span></td>
+            <td class="regAttribut"><%= f.text_field :user_name, autofocus: true, autocomplete: "off", class: "editInput" %></td>
+          </tr>
+
+          <tr>
+            <td class="regAttribut"><%#= f.label :user_name, style: "display: inline" %>Rolle</td>
+            <td class="regAttribut">
+              <div class="field">
+                <%= f.radio_button :role, :admin, class:'inline' %>
+                <%= f.label :role, "admin", :value => "admin", class:'inline' %>
+                <br>
+                <%= f.radio_button :role, :doc, class:'inline' %>
+                <%= f.label :role, "doctor", :value => "doctor", class:'inline' %>
+                <br>
+                <%= f.radio_button :role, :user, class:'inline' %>
+                <%= f.label :role, "user", :value => "user" , class:'inline'%>
+
+              </div>
+              <%#= f.radio :user_name, autofocus: true, autocomplete: "off", class: "editInput" %>
+            </td>
+          </tr>
+          <tr>
+            <td class="regAttribut"><%#= f.label :first_name %>Vorname</td>
+            <td class="regAttribut"><%= f.text_field :first_name, autocomplete: "off", class: "editInput" %></td>
+          </tr>
+
+          <tr>
+            <td class="regAttribut"><%#= f.label :last_name %>Nachname</td>
+            <td class="regAttribut"><%= f.text_field :last_name, autocomplete: "off", class: "editInput" %></td>
+          </tr>
+
+          <tr>
+            <td class="regAttribut"><%#= f.label :age %>Alter</td>
+            <td class="regAttribut"><%= f.number_field :age, autocomplete: "off", class: "editInput", onkeypress:"return isNumberKey(event)" %></td>
+          </tr>
+
+          <tr>
+            <td class="regAttribut"><%#= f.label :phone %>Telefonnummer</td>
+            <td class="regAttribut"><%= f.number_field :phone, class: "editInput", onkeypress:"return isNumberKey(event)" %></td>
+          </tr>
+
+          <tr>
+            <td class="regAttribut"><%= f.label :email, style: "display: inline" %>
+              <span class="mandatory_field">*</span></td>
+            <td class="regAttribut"><%= f.email_field :email, autocomplete: "email", class: "editInput" %></td>
+          </tr>
+
+          <tr>
+            <td class="regAttribut"><%= f.label :password, style: "display: inline" %>
+              <% if @minimum_password_length %>
+                <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br/>
+            </td>
+            <td class="regAttribut"><%= f.password_field :password, autocomplete: "off", class: "editInput" %></td>
+          </tr>
+        </table>
+      </fieldset>
+        <div class="dt-table-link-border">
+          <%= f.submit "update", class: "dt-table-link" %>
+        </div>
+        <div class="dt-table-link-border">
+          <%= link_to 'back', admin_users_path, class: "dt-table-link" %>
+        </div>
+      <div id="mandatory_fields" style="text-align: center">
+          <span>Felder mit einem <span class="mandatory_field">*</span> sind Pflichtfelder.</span>
+      </div>
+    </div>
   </div>
-<% end %>
+</div>
