--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing User</h1>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'Show', admin_user_path(@user) %> |
-<%= link_to 'Back', admin_users_path %>
+<%=form_for @user, url: admin_user_path(@user), html: { method: :put } do |f| %>
+  <%= render 'form', f: f %>
+<% end %>
